--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Patanjali Kumar P</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Gamer,Electronics Geek,Web Developer,Web Designer,Frontend Developer,Graphic Designer,Cinephile,QA Analyst</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Gamer,Electronics Enthusiast,QA Analyst,Audiophile,Cinephile,Aspiring Graphic Designer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -105,17 +105,17 @@
                   <p class="title-s">Skill</p>
                   <span>Photoshop</span> <span class="pull-right">75%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                   <span>Windows and Linux</span> <span class="pull-right">80%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                   <span>Debugging</span> <span class="pull-right">65%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                   <span>Problem Solving</span> <span class="pull-right">90%</span>
@@ -125,11 +125,17 @@
                    </div>   
                       <span>Communication</span> <span class="pull-right">85%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
+                  </div>
+                  <span>Grinding Games</span> <span class="pull-right">110%</span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 110%" aria-valuenow="110" aria-valuemin="0"
+                      aria-valuemax="110"></div>
                   </div>
                 </div>
               </div>
+              
               <div class="col-md-6">
                 <div class="about-me pt-4 pt-md-0">
                   <div class="title-box-2">
@@ -138,14 +144,13 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    I am a resourceful and ambitious 24 year old 
-engineering graduate with a penchant for technology and zeal to constantly update my skills. I like to pride myself with my ability to develop and maintain solid interpersonal relationships. I excel at interpersonal communication, which I believe is the cornerstone of good teamwork - an aspect necessary for success of any project.
+                    I am a resourceful and ambitious 24 year old graduate with a penchant for technology, games, art and zeal to constantly be a better version of myself. I enjoy playing games more than anything else and would love to gain valuable experience to help obtain a position to use the skills and experience to efficiently implement protocols and improve upon it.
                   </p>
                   <p class="lead">
-                    I have developed functioning websites, coded ALP for IOT devices and actively contributed to many revolutionary projects such as Spectrophotometer, ARIA etc.,. Apart from the technical aspects, I have also been a proficient gamer, having played countless hours on LAN for CS 1.6, 200 hours on CS : GO, 300 hours on Overwatch 2 and 500+ hours on Valorant. I also love RPG such as the Far Cry series, Assassin's Creed series, Metro series and many others. I especially enjoy RTS games such as Factoria, AOE2, Satisfactory on a slow morning with a coffee and some Lo-Fi playing in the background. 
+                    I have been a gamer most of my life accumulating 200+ hours in CS: GO , 350+ in Overwatch 2, 500+ in valorant and while I enjoy playing fps games, I also love playing RPG games such as Red Dead Redemption which has to be the best style of graphics I have played with, Assassin's Creed series, Far Cry series etc.,. as well as Open World Adventure games such as GTA 5 which has been by far my favourite in the GTA series. I also enjoy sipping coffee and relaxing to some RTS games like Factoria or AOE2 or Satisfactory.
                   </p>
                   <p class="lead">
-                    I am looking to contribute to the workforce while furhter developing my skills to enhance my ability to develop and maintain groundbreaking and demanding projects.
+                    I am looking to contribute to the workforce while further developing my skills to enhance my ability to develop and maintain groundbreaking and demanding projects.
                   </p>
                 </div>
               </div>
