--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/nobgtestimonial-2.png" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -336,7 +336,7 @@
               Work Status
             </h5>
             <p class="subtitle-a">
-              <u>Looking for work</u>
+              <u>Growing at a great company</u>
             </p>
             <!--
             <div class="line-mf"></div>
@@ -717,7 +717,7 @@
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                      I am available to work remote for companies based out of anywhere and locally for offices in Bangalore, India.
+                      Looking to contribute to growing companies as a technical writer or content creator and curator.
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Rajajinagar, Bangalore, India 560040</li>
@@ -743,7 +743,7 @@
       </div>
     </div>
   </centre>
-    <footer>
+    <!--footer>
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
